src/App.css
:root {
  --form-bg: #222831;
  --second-clr: #31363f;
  --thrd-clr: #76abae;
  --fourth-clr: #eeeeee;
}

main {
  display: flex;
  height: 100svh;
  font-size: 1.5rem;
}

main > * {
  flex: 1;
}

img {
  width: 40px;
  height: auto;
}

.editBtn,
.addBtn {
  margin: 0;
  padding: 0;
  border: 0;
  background-color: transparent;
  width: fit-content;
  height: fit-content;
  fill: var(--thrd-clr);
}

.socialMediaBtn {
  border: none;
  width: 30px;
  transition: background-color 0.2s ease-out;
}

.socialMediaBtn:hover {
  background-color: #c0c0c0 !important;
  transition: background-color 0.2s ease-in;
}

.socialMediaBtn > img {
  width: 20px;
  height: 20px;
}

.cvInput {
  display: flex;
  flex-direction: column;
  padding: 4.5rem;
  gap: 2rem;
  color: var(--fourth-clr);
  overflow: scroll;
  overflow-x: hidden;
  background-color: var(--second-clr);
}

.cvInputHeading {
  display: inline-flex;
  justify-content: space-between;
  height: fit-content;
}

.cvInputHeading div > * {
  margin: 0;
}

.downloadBtn {
  height: fit-content;
  padding: 1rem;
  background-color: var(--thrd-clr);
  border: none;
  border-radius: 360px;
  cursor: pointer;
}

.customDeleteBtn {
  background-color: red;
  border: none;
  width: fit-content;
  height: fit-content;
  border-radius: 10px;
}

.customDeleteBtn img {
  width: 30px;
  height: auto;
}

.cvForm {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;

  color: var(--fourth-clr);
}

/* Styling of section */
.outerSection {
  background-color: var(--fourth-clr);
  color: var(--form-bg);
  padding: 1rem;
  border-radius: 18px;
  font-size: smaller;
}

.customForm {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 1rem;
  margin-bottom: 0.8rem;
  padding: 1rem;
  background-color: #e2e2e2;
  border-radius: 10px;
}

/* Styling of forms within section */
.personalForm {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  margin-bottom: 0.8rem;
  padding: 1rem;
  background-color: #e2e2e2;
  border-radius: 10px;
}

.forms {
  display: flex;
  flex-direction: column;
  margin-bottom: 0.8rem;
  padding: 1rem;
  background-color: #e2e2e2;
  border-radius: 10px;
  gap: 0.5rem;
}

.personalDiv {
  margin-top: 3rem;
  border-radius: 10px;
}

.personalDiv {
  opacity: 0;
  height: 0;
  margin-top: 0;
  background-color: rgb(238, 238, 238);
  transition:
    height 0.2s,
    margin-top 0.2s,
    opacity 0.1s;
}

.personalForm {
  opacity: 0;
  height: 0;
  background-color: rgb(238, 238, 238);
  transition:
    height 0.2s,
    margin-top 0.2s,
    opacity 0.1s;
}

.personalForm.invisible {
  height: 0 !important;
  margin: 0 !important;
  padding: 0 !important;
  opacity: 0;
  transform: translateY(100px);
  transition:
    opacity,
    transform 0.2s ease;
}

.personalDiv.visible,
.personalForm.visible {
  height: auto;
  margin-top: 3rem;
  opacity: 1;
  background-color: rgb(226, 226, 226);
  transform: translateY(0);
  transition:
    opacity 0.1s ease,
    transform 0.2s ease;
}

.container {
  margin-top: 3rem;
}

.container.invisible {
  height: 0 !important;
  opacity: 0 !important;
  margin: 0 !important;
  transform: translateY(100px);
  visibility: hidden;
  cursor: default;
  transition:
    opacity 0.2s ease,
    transform 0.2s ease;
}

.container.visible {
  height: auto !important;
  opacity: 1 !important;
  visibility: visible;
  transform: translateY(0);
  transition:
    opacity 0.2s ease,
    transform 0.2s ease;
}

.outerSection h1 {
  font-weight: normal;
  font-size: 1.5rem;
}

/* Form in section */
.personalForm div {
  display: flex;
  flex: auto;
  gap: 0.5rem;
  flex-direction: column;
  width: 40%;
}

.formContainer {
  display: flex;
  flex: auto;
  gap: 1rem;
}

.forms div > div {
  display: flex;
  flex: auto;
  gap: 0.5rem;
  flex-direction: column;
  width: 40%;
}

.socialMediaBtns {
  gap: 0 !important;
}

.forms div input,
.personalForm div input,
textarea {
  padding: 18px;
  font-size: 1rem;
  border-radius: 10px;
  border: none;
  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
}

.forms div label,
.personalForm div label {
  font-size: smaller;
}

.innerSections,
.innerSections1 {
  display: flex;
  justify-content: space-between;
  font-size: smaller;
  align-items: center;
  margin-bottom: 0.8rem;
  padding: 0.5rem;
  border-radius: 10px;
  background-color: #e2e2e2;
}

.innerSectionsCustom {
  display: flex;
  justify-content: space-between;
  font-size: smaller;
  align-items: center;
  border-radius: 10px;
}

#socialMedia {
  width: 100%;
  border-radius: 0 10px 10px 0;
  box-shadow: none !important;
}

.innerSections p,
.innerSections1 p {
  margin-left: 0.2rem;
}

.skills {
  border: none;
  outline: none;
}

.skillsDiv {
  display: flex;
  align-items: center;
  padding: 12px;
  border-radius: 10px;
  border: none;
  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
  background-color: rgb(255, 255, 255);
  flex-wrap: wrap;
}

.skillsDiv input {
  box-shadow: none !important;
}

.skillsDiv div {
  display: flex;
  margin: 0px 4px;
  align-items: center;
  font-size: 12px;
  background-color: #e4ad4e;
  padding: 0.3rem;
  padding-right: 0.8rem;
  padding-left: 0.8rem;
  border-radius: 30px;
  height: fit-content;
  font-size: 0.8rem;
}

.skillsDiv button {
  background-color: transparent;
  border: none;
}

.buttonsEdit > button {
  background-color: red;
  border: none;
  color: var(--form-bg);
  font-weight: bold;
  border-radius: 8px;
  padding: 1rem;
  width: 80px;
}

.buttonsEdit p button:first-child,
.addBtnContainer button:first-child {
  background-color: violet;
  border: none;
  color: var(--second-clr);
  border-radius: 8px;
  padding: 0.5rem;
}

.buttonsEdit p button:nth-child(2),
.addBtnContainer button:nth-child(2) {
  background-color: var(--thrd-clr);
  border: none;
  color: var(--second-clr);
  border-radius: 8px;
  padding: 0.5rem;
  width: 50px;
}

.buttonsEdit {
  display: flex;
  justify-content: space-between;
}

.buttonsEdit button,
.buttonsEdit p > * {
  padding: 0.3rem;
  font-size: 0.9rem;
}

.buttonsEdit p {
  display: flex;
  gap: 0.3rem;
}

.addBtnContainer {
  display: flex;
  justify-content: flex-end;
  gap: 0.5rem;
}

.addBtnContainer button {
  padding: 0.3rem;
  font-size: 0.9rem;
}

.forms.invisible,
.forms.invisible * {
  height: 0 !important;
  width: 0;
  opacity: 0;
  visibility: hidden;
  padding: 0;
  margin: 0;
  transform: translateY(100px);
  transition:
    visibility,
    opacity 0.2s ease,
    transform 0.2s ease;
}

.forms.visible,
.forms.visible * {
  opacity: 1;
  visibility: visible;
  transform: translateY(0);
  transition:
    visibility 0.1s,
    opacity 0.2s ease,
    transform 0.2s ease;
}

.innerSections.invisible,
.innerSections1.invisible,
.innerSections.invisible *,
.innerSections1.invisible * {
  height: 0 !important;
  width: 0 !important;
  margin: 0;
  padding: 0;
  font-size: 0;
  opacity: 0;
  visibility: hidden;
}

.arrow.down {
  transform: rotate(180deg);
  transition: transform 0.4s ease;
  cursor: pointer;
}

.arrow.up {
  transform: rotate(0deg);
  transition: transform 0.4s ease;
  cursor: pointer;
}

